# llm

./: .env.example  pyproject.toml  requirements.txt
hooks/: pre-commit
scripts/: run.sh  tests.sh
src/llm/: __init__.py  __main__.py  client.py  config.py  llm.py
